Project/p2/y.output
Useless nonterminals

   forward_declaration
   animation_parameter
   if_block
   if_statement
   for_statement
   print_statement
   exit_statement
   assign_statement_or_empty


Terminals which are not used

   "error"
   "string"
   "forward"
   "if"
   "for"
   "else"
   "exit"
   "print"
   "space"
   "uparrow"
   "downarrow"
   "leftmouse_down"
   "middlemouse_down"
   "rightmouse_down"
   "leftmouse_up"
   "middlemouse_up"
   "rightmouse_up"
   "mouse_move"
   "mouse_drag"
   "f1"
   "akey"
   "skey"
   "dkey"
   "fkey"
   "hkey"
   "jkey"
   "kkey"
   "lkey"
   "wkey"
   "zkey"
   "sin"
   "cos"
   "tan"
   "asin"
   "acos"
   "atan"
   "sqrt"
   "abs"
   "floor"
   "random"
   "*"
   "/"
   "%"
   "<"
   ">"
   "<="
   ">="
   "=="
   "!="
   "&&"
   "||"


Useless rules

   81 forward_declaration: /* empty */

   82 animation_parameter: object_type "identifier"

   83 if_block: statement_block_creator statement end_of_statement_block
   84         | statement_block

   85 if_statement: "if" "(" expression ")" if_block
   86             | "if" "(" expression ")" if_block "else" if_block

   87 for_statement: "for" "(" statement_block_creator assign_statement_or_empty end_of_statement_block ";" expression ";" statement_block_creator assign_statement_or_empty end_of_statement_block ")" statement_block

   88 print_statement: "print" "(" expression ")"

   89 exit_statement: "exit" "(" expression ")"

   90 assign_statement_or_empty: assign_statement
   91                          | empty


Rules never reduced

   42 statement: /* empty */

   79 math_operator: /* empty */


State 32 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 94 conflicts: 2 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 139 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration ";"
    5            | object_declaration ";"

    6 variable_declaration: simple_type "identifier" optional_initializer
    7                     | simple_type "identifier" "[" expression "]"

    8 simple_type: "int"
    9            | "double"

   10 optional_initializer: "=" expression
   11                     | empty

   12 object_declaration: object_type "identifier" "(" parameter_list_or_empty ")"
   13                   | object_type "identifier" "[" expression "]"

   14 object_type: "triangle"
   15            | "pixmap"
   16            | "circle"
   17            | "rectangle"
   18            | "textbox"

   19 parameter_list_or_empty: parameter_list
   20                        | empty

   21 parameter_list: parameter_list "," parameter
   22               | parameter

   23 parameter: "identifier" "=" expression

   24 block_list: block_list block
   25           | empty

   26 block: initialization_block
   27      | termination_block
   28      | animation_block
   29      | on_block

   30 initialization_block: "initialization" statement_block

   31 termination_block: "termination" statement_block

   32 animation_block: "animation" "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

   33 check_animation_parameter: object_type "identifier"

   34 on_block: "on" keystroke statement_block

   35 keystroke: "leftarrow"
   36          | "rightarrow"

   37 statement_block: "{" statement_block_creator statement_list "}" end_of_statement_block

   38 statement_block_creator: /* empty */

   39 end_of_statement_block: /* empty */

   40 statement_list: statement_list statement
   41               | empty

   42 statement: /* empty */
   43          | assign_statement ";"

   44 assign_statement: variable "=" expression
   45                 | variable "+=" expression
   46                 | variable "-=" expression
   47                 | variable "++"
   48                 | variable "--"

   49 variable: "identifier"
   50         | "identifier" "[" expression "]"
   51         | "identifier" "." "identifier"
   52         | "identifier" "[" expression "]" "." "identifier"

   53 expression: primary_expression
   54           | expression T_OR expression
   55           | expression T_AND expression
   56           | expression T_LESS_EQUAL expression
   57           | expression T_GREATER_EQUAL expression
   58           | expression T_LESS expression
   59           | expression T_GREATER expression
   60           | expression T_EQUAL expression
   61           | expression T_NOT_EQUAL expression
   62           | expression "+" expression
   63           | expression "-" expression
   64           | expression T_MULTIPLY expression
   65           | expression T_DIVIDE expression
   66           | expression T_MOD expression
   67           | "-" expression
   68           | "!" expression
   69           | math_operator "(" expression ")"
   70           | expression "near" expression
   71           | expression "touches" expression

   72 primary_expression: "(" expression ")"
   73                   | variable
   74                   | "int constant"
   75                   | "true"
   76                   | "false"
   77                   | "double constant"
   78                   | "string constant"

   79 math_operator: /* empty */

   80 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
"error" (258)
"int" (259) 8
"double" (260) 9
"string" (261)
"triangle" (262) 14
"pixmap" (263) 15
"circle" (264) 16
"rectangle" (265) 17
"textbox" (266) 18
"forward" (267)
"initialization" (268) 30
"termination" (269) 31
"on" (270) 34
"animation" (271) 32
"if" (272)
"for" (273)
"else" (274)
"exit" (275)
"print" (276)
"true" (277) 75
"false" (278) 76
"space" (279)
"leftarrow" (280) 35
"rightarrow" (281) 36
"uparrow" (282)
"downarrow" (283)
"leftmouse_down" (284)
"middlemouse_down" (285)
"rightmouse_down" (286)
"leftmouse_up" (287)
"middlemouse_up" (288)
"rightmouse_up" (289)
"mouse_move" (290)
"mouse_drag" (291)
"f1" (292)
"akey" (293)
"skey" (294)
"dkey" (295)
"fkey" (296)
"hkey" (297)
"jkey" (298)
"kkey" (299)
"lkey" (300)
"wkey" (301)
"zkey" (302)
"(" (303) 12 32 69 72
")" (304) 12 32 69 72
"{" (305) 32 37
"}" (306) 32 37
"[" (307) 7 13 50 52
"]" (308) 7 13 50 52
";" (309) 4 5 43
"," (310) 21
"." (311) 51 52
"=" (312) 10 23 44
"+=" (313) 45
"-=" (314) 46
"++" (315) 47
"--" (316) 48
"sin" (317)
"cos" (318)
"tan" (319)
"asin" (320)
"acos" (321)
"atan" (322)
"sqrt" (323)
"abs" (324)
"floor" (325)
"random" (326)
"touches" (327) 71
"near" (328) 70
"*" (329)
"/" (330)
"+" (331) 62
"-" (332) 63 67
"%" (333)
"<" (334)
">" (335)
"<=" (336)
">=" (337)
"==" (338)
"!=" (339)
"!" (340) 68
"&&" (341)
"||" (342)
"int constant" (343) 74
"double constant" (344) 77
"string constant" (345) 78
"identifier" (346) 6 7 12 13 23 32 33 49 50 51 52
IF_NO_ELSE (347)
T_OR (348) 54
T_AND (349) 55
T_NOT_EQUAL (350) 61
T_EQUAL (351) 60
T_GREATER_EQUAL (352) 57
T_LESS_EQUAL (353) 56
T_GREATER (354) 59
T_LESS (355) 58
T_MOD (356) 66
T_DIVIDE (357) 65
T_MULTIPLY (358) 64
UNARY_OPS (359)


Nonterminals, with rules where they appear

$accept (105)
    on left: 0
program (106)
    on left: 1, on right: 0
declaration_list (107)
    on left: 2 3, on right: 1 2
declaration (108)
    on left: 4 5, on right: 2
variable_declaration (109)
    on left: 6 7, on right: 4
simple_type (110)
    on left: 8 9, on right: 6 7
optional_initializer (111)
    on left: 10 11, on right: 6
object_declaration (112)
    on left: 12 13, on right: 5
object_type (113)
    on left: 14 15 16 17 18, on right: 12 13 33
parameter_list_or_empty (114)
    on left: 19 20, on right: 12
parameter_list (115)
    on left: 21 22, on right: 19 21
parameter (116)
    on left: 23, on right: 21 22
block_list (117)
    on left: 24 25, on right: 1 24
block (118)
    on left: 26 27 28 29, on right: 24
initialization_block (119)
    on left: 30, on right: 26
termination_block (120)
    on left: 31, on right: 27
animation_block (121)
    on left: 32, on right: 28
check_animation_parameter (122)
    on left: 33, on right: 32
on_block (123)
    on left: 34, on right: 29
keystroke (124)
    on left: 35 36, on right: 34
statement_block (125)
    on left: 37, on right: 30 31 34
statement_block_creator (126)
    on left: 38, on right: 37
end_of_statement_block (127)
    on left: 39, on right: 32 37
statement_list (128)
    on left: 40 41, on right: 32 37 40
statement (129)
    on left: 42 43, on right: 40
assign_statement (130)
    on left: 44 45 46 47 48, on right: 43
variable (131)
    on left: 49 50 51 52, on right: 44 45 46 47 48 73
expression (132)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71, on right: 7 10 13 23 44 45 46 50 52 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72
primary_expression (133)
    on left: 72 73 74 75 76 77 78, on right: 53
math_operator (134)
    on left: 79, on right: 69
empty (135)
    on left: 80, on right: 3 11 20 25 41


state 0

    0 $accept: . program $end

    $default  reduce using rule 80 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


state 1

    0 $accept: program . $end

    $end  shift, and go to state 4


state 2

    1 program: declaration_list . block_list
    2 declaration_list: declaration_list . declaration

    "int"        shift, and go to state 5
    "double"     shift, and go to state 6
    "triangle"   shift, and go to state 7
    "pixmap"     shift, and go to state 8
    "circle"     shift, and go to state 9
    "rectangle"  shift, and go to state 10
    "textbox"    shift, and go to state 11

    $default  reduce using rule 80 (empty)

    declaration           go to state 12
    variable_declaration  go to state 13
    simple_type           go to state 14
    object_declaration    go to state 15
    object_type           go to state 16
    block_list            go to state 17
    empty                 go to state 18


state 3

    3 declaration_list: empty .

    $default  reduce using rule 3 (declaration_list)


state 4

    0 $accept: program $end .

    $default  accept


state 5

    8 simple_type: "int" .

    $default  reduce using rule 8 (simple_type)


state 6

    9 simple_type: "double" .

    $default  reduce using rule 9 (simple_type)


state 7

   14 object_type: "triangle" .

    $default  reduce using rule 14 (object_type)


state 8

   15 object_type: "pixmap" .

    $default  reduce using rule 15 (object_type)


state 9

   16 object_type: "circle" .

    $default  reduce using rule 16 (object_type)


state 10

   17 object_type: "rectangle" .

    $default  reduce using rule 17 (object_type)


state 11

   18 object_type: "textbox" .

    $default  reduce using rule 18 (object_type)


state 12

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 13

    4 declaration: variable_declaration . ";"

    ";"  shift, and go to state 19


state 14

    6 variable_declaration: simple_type . "identifier" optional_initializer
    7                     | simple_type . "identifier" "[" expression "]"

    "identifier"  shift, and go to state 20


state 15

    5 declaration: object_declaration . ";"

    ";"  shift, and go to state 21


state 16

   12 object_declaration: object_type . "identifier" "(" parameter_list_or_empty ")"
   13                   | object_type . "identifier" "[" expression "]"

    "identifier"  shift, and go to state 22


state 17

    1 program: declaration_list block_list .
   24 block_list: block_list . block

    "initialization"  shift, and go to state 23
    "termination"     shift, and go to state 24
    "on"              shift, and go to state 25
    "animation"       shift, and go to state 26

    $default  reduce using rule 1 (program)

    block                 go to state 27
    initialization_block  go to state 28
    termination_block     go to state 29
    animation_block       go to state 30
    on_block              go to state 31


state 18

   25 block_list: empty .

    $default  reduce using rule 25 (block_list)


state 19

    4 declaration: variable_declaration ";" .

    $default  reduce using rule 4 (declaration)


state 20

    6 variable_declaration: simple_type "identifier" . optional_initializer
    7                     | simple_type "identifier" . "[" expression "]"

    "["  shift, and go to state 32
    "="  shift, and go to state 33

    $default  reduce using rule 80 (empty)

    optional_initializer  go to state 34
    empty                 go to state 35


state 21

    5 declaration: object_declaration ";" .

    $default  reduce using rule 5 (declaration)


state 22

   12 object_declaration: object_type "identifier" . "(" parameter_list_or_empty ")"
   13                   | object_type "identifier" . "[" expression "]"

    "("  shift, and go to state 36
    "["  shift, and go to state 37


state 23

   30 initialization_block: "initialization" . statement_block

    "{"  shift, and go to state 38

    statement_block  go to state 39


state 24

   31 termination_block: "termination" . statement_block

    "{"  shift, and go to state 38

    statement_block  go to state 40


state 25

   34 on_block: "on" . keystroke statement_block

    "leftarrow"   shift, and go to state 41
    "rightarrow"  shift, and go to state 42

    keystroke  go to state 43


state 26

   32 animation_block: "animation" . "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "identifier"  shift, and go to state 44


state 27

   24 block_list: block_list block .

    $default  reduce using rule 24 (block_list)


state 28

   26 block: initialization_block .

    $default  reduce using rule 26 (block)


state 29

   27 block: termination_block .

    $default  reduce using rule 27 (block)


state 30

   28 block: animation_block .

    $default  reduce using rule 28 (block)


state 31

   29 block: on_block .

    $default  reduce using rule 29 (block)


state 32

    7 variable_declaration: simple_type "identifier" "[" . expression "]"

    "true"             shift, and go to state 45
    "false"            shift, and go to state 46
    "("                shift, and go to state 47
    "-"                shift, and go to state 48
    "!"                shift, and go to state 49
    "int constant"     shift, and go to state 50
    "double constant"  shift, and go to state 51
    "string constant"  shift, and go to state 52
    "identifier"       shift, and go to state 53

    "("  [reduce using rule 79 (math_operator)]

    variable            go to state 54
    expression          go to state 55
    primary_expression  go to state 56
    math_operator       go to state 57


state 33

   10 optional_initializer: "=" . expression

    "true"             shift, and go to state 45
    "false"            shift, and go to state 46
    "("                shift, and go to state 47
    "-"                shift, and go to state 48
    "!"                shift, and go to state 49
    "int constant"     shift, and go to state 50
    "double constant"  shift, and go to state 51
    "string constant"  shift, and go to state 52
    "identifier"       shift, and go to state 53

    "("  [reduce using rule 79 (math_operator)]

    variable            go to state 54
    expression          go to state 58
    primary_expression  go to state 56
    math_operator       go to state 57


state 34

    6 variable_declaration: simple_type "identifier" optional_initializer .

    $default  reduce using rule 6 (variable_declaration)


state 35

   11 optional_initializer: empty .

    $default  reduce using rule 11 (optional_initializer)


state 36

   12 object_declaration: object_type "identifier" "(" . parameter_list_or_empty ")"

    "identifier"  shift, and go to state 59

    $default  reduce using rule 80 (empty)

    parameter_list_or_empty  go to state 60
    parameter_list           go to state 61
    parameter                go to state 62
    empty                    go to state 63


state 37

   13 object_declaration: object_type "identifier" "[" . expression "]"

    "true"             shift, and go to state 45
    "false"            shift, and go to state 46
    "("                shift, and go to state 47
    "-"                shift, and go to state 48
    "!"                shift, and go to state 49
    "int constant"     shift, and go to state 50
    "double constant"  shift, and go to state 51
    "string constant"  shift, and go to state 52
    "identifier"       shift, and go to state 53

    "("  [reduce using rule 79 (math_operator)]

    variable            go to state 54
    expression          go to state 64
    primary_expression  go to state 56
    math_operator       go to state 57


state 38

   37 statement_block: "{" . statement_block_creator statement_list "}" end_of_statement_block

    $default  reduce using rule 38 (statement_block_creator)

    statement_block_creator  go to state 65


state 39

   30 initialization_block: "initialization" statement_block .

    $default  reduce using rule 30 (initialization_block)


state 40

   31 termination_block: "termination" statement_block .

    $default  reduce using rule 31 (termination_block)


state 41

   35 keystroke: "leftarrow" .

    $default  reduce using rule 35 (keystroke)


state 42

   36 keystroke: "rightarrow" .

    $default  reduce using rule 36 (keystroke)


state 43

   34 on_block: "on" keystroke . statement_block

    "{"  shift, and go to state 38

    statement_block  go to state 66


state 44

   32 animation_block: "animation" "identifier" . "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "("  shift, and go to state 67


state 45

   75 primary_expression: "true" .

    $default  reduce using rule 75 (primary_expression)


state 46

   76 primary_expression: "false" .

    $default  reduce using rule 76 (primary_expression)


state 47

   72 primary_expression: "(" . expression ")"

    "true"             shift, and go to state 45
    "false"            shift, and go to state 46
    "("                shift, and go to state 47
    "-"                shift, and go to state 48
    "!"                shift, and go to state 49
    "int constant"     shift, and go to state 50
    "double constant"  shift, and go to state 51
    "string constant"  shift, and go to state 52
    "identifier"       shift, and go to state 53

    "("  [reduce using rule 79 (math_operator)]

    variable            go to state 54
    expression          go to state 68
    primary_expression  go to state 56
    math_operator       go to state 57


state 48

   67 expression: "-" . expression

    "true"             shift, and go to state 45
    "false"            shift, and go to state 46
    "("                shift, and go to state 47
    "-"                shift, and go to state 48
    "!"                shift, and go to state 49
    "int constant"     shift, and go to state 50
    "double constant"  shift, and go to state 51
    "string constant"  shift, and go to state 52
    "identifier"       shift, and go to state 53

    "("  [reduce using rule 79 (math_operator)]

    variable            go to state 54
    expression          go to state 69
    primary_expression  go to state 56
    math_operator       go to state 57


state 49

   68 expression: "!" . expression

    "true"             shift, and go to state 45
    "false"            shift, and go to state 46
    "("                shift, and go to state 47
    "-"                shift, and go to state 48
    "!"                shift, and go to state 49
    "int constant"     shift, and go to state 50
    "double constant"  shift, and go to state 51
    "string constant"  shift, and go to state 52
    "identifier"       shift, and go to state 53

    "("  [reduce using rule 79 (math_operator)]

    variable            go to state 54
    expression          go to state 70
    primary_expression  go to state 56
    math_operator       go to state 57


state 50

   74 primary_expression: "int constant" .

    $default  reduce using rule 74 (primary_expression)


state 51

   77 primary_expression: "double constant" .

    $default  reduce using rule 77 (primary_expression)


state 52

   78 primary_expression: "string constant" .

    $default  reduce using rule 78 (primary_expression)


state 53

   49 variable: "identifier" .
   50         | "identifier" . "[" expression "]"
   51         | "identifier" . "." "identifier"
   52         | "identifier" . "[" expression "]" "." "identifier"

    "["  shift, and go to state 71
    "."  shift, and go to state 72

    $default  reduce using rule 49 (variable)


state 54

   73 primary_expression: variable .

    $default  reduce using rule 73 (primary_expression)


state 55

    7 variable_declaration: simple_type "identifier" "[" expression . "]"
   54 expression: expression . T_OR expression
   55           | expression . T_AND expression
   56           | expression . T_LESS_EQUAL expression
   57           | expression . T_GREATER_EQUAL expression
   58           | expression . T_LESS expression
   59           | expression . T_GREATER expression
   60           | expression . T_EQUAL expression
   61           | expression . T_NOT_EQUAL expression
   62           | expression . "+" expression
   63           | expression . "-" expression
   64           | expression . T_MULTIPLY expression
   65           | expression . T_DIVIDE expression
   66           | expression . T_MOD expression
   70           | expression . "near" expression
   71           | expression . "touches" expression

    "]"              shift, and go to state 73
    "touches"        shift, and go to state 74
    "near"           shift, and go to state 75
    "+"              shift, and go to state 76
    "-"              shift, and go to state 77
    T_OR             shift, and go to state 78
    T_AND            shift, and go to state 79
    T_NOT_EQUAL      shift, and go to state 80
    T_EQUAL          shift, and go to state 81
    T_GREATER_EQUAL  shift, and go to state 82
    T_LESS_EQUAL     shift, and go to state 83
    T_GREATER        shift, and go to state 84
    T_LESS           shift, and go to state 85
    T_MOD            shift, and go to state 86
    T_DIVIDE         shift, and go to state 87
    T_MULTIPLY       shift, and go to state 88


state 56

   53 expression: primary_expression .

    $default  reduce using rule 53 (expression)


state 57

   69 expression: math_operator . "(" expression ")"

    "("  shift, and go to state 89


state 58

   10 optional_initializer: "=" expression .
   54 expression: expression . T_OR expression
   55           | expression . T_AND expression
   56           | expression . T_LESS_EQUAL expression
   57           | expression . T_GREATER_EQUAL expression
   58           | expression . T_LESS expression
   59           | expression . T_GREATER expression
   60           | expression . T_EQUAL expression
   61           | expression . T_NOT_EQUAL expression
   62           | expression . "+" expression
   63           | expression . "-" expression
   64           | expression . T_MULTIPLY expression
   65           | expression . T_DIVIDE expression
   66           | expression . T_MOD expression
   70           | expression . "near" expression
   71           | expression . "touches" expression

    "touches"        shift, and go to state 74
    "near"           shift, and go to state 75
    "+"              shift, and go to state 76
    "-"              shift, and go to state 77
    T_OR             shift, and go to state 78
    T_AND            shift, and go to state 79
    T_NOT_EQUAL      shift, and go to state 80
    T_EQUAL          shift, and go to state 81
    T_GREATER_EQUAL  shift, and go to state 82
    T_LESS_EQUAL     shift, and go to state 83
    T_GREATER        shift, and go to state 84
    T_LESS           shift, and go to state 85
    T_MOD            shift, and go to state 86
    T_DIVIDE         shift, and go to state 87
    T_MULTIPLY       shift, and go to state 88

    $default  reduce using rule 10 (optional_initializer)


state 59

   23 parameter: "identifier" . "=" expression

    "="  shift, and go to state 90


state 60

   12 object_declaration: object_type "identifier" "(" parameter_list_or_empty . ")"

    ")"  shift, and go to state 91


state 61

   19 parameter_list_or_empty: parameter_list .
   21 parameter_list: parameter_list . "," parameter

    ","  shift, and go to state 92

    $default  reduce using rule 19 (parameter_list_or_empty)


state 62

   22 parameter_list: parameter .

    $default  reduce using rule 22 (parameter_list)


state 63

   20 parameter_list_or_empty: empty .

    $default  reduce using rule 20 (parameter_list_or_empty)


state 64

   13 object_declaration: object_type "identifier" "[" expression . "]"
   54 expression: expression . T_OR expression
   55           | expression . T_AND expression
   56           | expression . T_LESS_EQUAL expression
   57           | expression . T_GREATER_EQUAL expression
   58           | expression . T_LESS expression
   59           | expression . T_GREATER expression
   60           | expression . T_EQUAL expression
   61           | expression . T_NOT_EQUAL expression
   62           | expression . "+" expression
   63           | expression . "-" expression
   64           | expression . T_MULTIPLY expression
   65           | expression . T_DIVIDE expression
   66           | expression . T_MOD expression
   70           | expression . "near" expression
   71           | expression . "touches" expression
